--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,5 +1,5 @@
 .projects-page {
-  padding: 2rem 0;
+  padding: 6rem 0 2rem;
 }
 
 .filter-buttons {
